[package]
name = "genkey"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
ed25519-consensus = "2.1"
rand = "0.8"
rand_chacha = "0.3"
tendermint = "0.39"
tendermint-config = "0.39"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
subtle-encoding = { version = "0.5", default-features = false }